<resources>
    <string name="app_name">FoodDeliveryApp</string>
    <string name="food_delivery_app">FOODIE</string>
    <string name="a_food_delivery_app">A Food Delivery App</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="assign_password_to_account">Assign Password to Account</string>
    <string name="register_email">Register Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_accounts">Existing Accounts</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_age">Enter Age</string>
    <string name="finish_registration">Finish Registration</string>
    <string name="customer_password"><![CDATA[Customer Password ->]]></string>
    <string name="customer_age">Customer Age</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="create_account">Create Account</string>
    <string name="what_would_you_like_to_n_order_today">What would you like to \nOrder Today ?</string>
</resources>